...
      android:id="@+id/r_engl_phrase"/>
    <TextView
      style="@style/plain_speech"
      android:gravity="center_horizontal"
      android:paddingBottom="20dp"
      android:textColor="@color/reply_text_spn"
      android:id="@+id/r_span_phrase"/>
    <RelativeLayout
      style="@style/w_match_h_wrap">
      <TextView
        android:id="@+id/r_wfw_engl"
        style="@style/wfw_text"
        android:textColor="@color/reply_text_eng"/>
...
