...
  <string name="difficulty_instructions_spn">El número indica la dificultad.</string>
  <string name="delete_scene">Borre Una Escena</string>
  <string name="voice_attributions_title_eng">Voices in Scene</string>
  <string name="voice_attributions_title_spn">Voces en Escena</string>
  <string name="missed_pages_eng">You\'re at the end of the scene, but you missed a few pages. Scroll back to answer the questions.</string>
  <string name="missed_pages_spn">Estás al final de la escena, pero omitiste unas páginas. Retroceda para responder a las preguntas.</string>
  <string name="missed_pages_title_eng">Missed Pages</string>
  <string name="missed_pages_title_spn">Páginas Omitidas</string>
  <string name="clear_page_eng">Under the menu press \'Clear Page\' to clear the scene from this page forward. All your matched replies will be erased.</string>
  <string name="clear_page_spn">Bajo el menú, presione \'Clear Page\' para limpiar la escena desde esta página hasta la ultima. Todas las respuestas marcadas se borrarán.</string>
  <string name="lines_shown_h_eng">Lines Shown Hint</string>
  <string name="lines_shown_h_spn">Líneas Mostradas Indicación</string>
  <string name="lines_shown_r_eng">Lines Shown Reply</string>
  <string name="lines_shown_r_spn">Líneas Mostradas Respuesta</string>
...
